etape 2 page details

--- a/src/AppBundle/Resources/views/Movie/home.html.twig
+++ b/src/AppBundle/Resources/views/Movie/home.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% for movie in movies %}
-    <a class="movie" alt="{{ movie.title }}" href="#">
+    <a class="movie" alt="{{ movie.title }}" href="{{ path('details', {'id': movie.id}) }}">
        <img alt="{{ movie.title }}" src="{{ asset('posters/'~movie.imdbId~'.jpg') }}">
    </a>
 {% endfor %}
