--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Movies!</h1>
+            <h1><a href="{{ path('home') }}" title="Go back home">Movies!</a></h1>
         </header>
         <main>
             {% block content %}{% endblock %}
