--- a/src/AppBundle/Resources/views/AdminMovie/list.html.twig
+++ b/src/AppBundle/Resources/views/AdminMovie/list.html.twig
@@ -18,7 +18,7 @@
                 <td>{{ movie.year }}</td>
                 <td>
                     <a class="btn btn-default btn-sm" href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a>
-                    <a class="btn btn-danger btn-sm" href="#"><span class="glyphicon glyphicon-remove"></span> Delete</a>
+                    <a class="btn btn-danger btn-sm" href="{{ path('admin_delete', {'id': movie.id}) }}"><span class="glyphicon glyphicon-remove"></span> Delete</a>
                 </td>
             </tr>
         {% endfor %}
