--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -26,7 +26,11 @@
             {% block content %}{% endblock %}
         </main>
         <footer>
-
+            <div>&copy; Movies! {{ "now"|date("Y") }}</div>
+            <nav>
+                <a class="btn btn-default btn-sm" href="{{ path('home') }}">Accueil</a>
+                <a class="btn btn-default btn-sm" href="{{ path('admin_home') }}">Administration</a>
+            </nav>
         </footer>
     </div>
 </body>
