--- a/web/css/app.css
+++ b/web/css/app.css
@@ -3,6 +3,17 @@ body {
     color: #EEE;
 }
 
+main::after{
+    clear: both;
+    content: "";
+    display: block;
+}
+
+footer {
+    padding: 30px 0;
+    text-align: center;
+}
+
 h1 img {
     width: 50px;
     position: relative;
