etape 5 administration des reviews

--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -28,8 +28,9 @@
         <footer>
             <div>&copy; Movies! {{ "now"|date("Y") }}</div>
             <nav>
-                <a class="btn btn-default btn-sm" href="{{ path('home') }}">Accueil</a>
-                <a class="btn btn-default btn-sm" href="{{ path('admin_home') }}">Administration</a>
+                <a class="btn btn-default btn-sm" href="{{ path('home') }}">Home</a>
+                <a class="btn btn-default btn-sm" href="{{ path('admin_home') }}">Movies admin</a>
+                <a class="btn btn-default btn-sm" href="{{ path('admin_reviews') }}">Reviews admin</a>
             </nav>
         </footer>
     </div>
